syntax = "proto3";

package student;

option go_package = "ae.com/studentpb-buffers;studentpb";

message Student {
  string id = 1; // 1 is the position
  string name = 2; // 2 is the position
  int32 age = 3;
}

message GetStudentRequest {
  string id = 1;
}

message SetStudentResponse {
  string id = 1;
}

service StudentService {
  rpc GetStudent(GetStudentRequest) returns (Student);
  rpc SetStudent(Student) returns (SetStudentResponse);
}


//Allow generate proto buffers
// go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26

// allow grpc
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative studentpb/student.proto
