syntax = "proto3";

package test;

option go_package = "ae.com/testpb";

message Test {
  string id = 1;
  string name = 2;
}

message GetTestRequest {
  string id = 1;
}

message SetTestResponse {
  string id = 1;
}

service TestService {
  rpc GetTest(GetTestRequest) returns (Test); //the name of the each rpc service have to be different of the message
  rpc SetTest(Test) returns (SetTestResponse);
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative testpb/test.proto